cmake_minimum_required(VERSION 3.12)
project(MyClion C)

set(CMAKE_C_STANDARD 99)
SET(CMAKE_BUILE_TYPE DEBUG)
SET(CMAKE_C_FLAGS_DEBUG "-g -Wall")

add_executable(cosine Circle/cos.c)
add_executable(print main.c)
add_executable(Shit Circle/c003.c)
add_executable(test Circle/test.c)
add_executable(str Circle/str.c)
add_executable(None practice/type.c)
add_executable(punctuation practice/punctuation.c)
add_executable(type_trans practice/type_trans.c)
add_executable(single practice/single_word.c)
add_executable(printf practice/printf.c)
add_executable(scanf practice/Scanf.c)
add_executable(scanf02 practice/scanf02.c)
add_executable(scanf03 practice/scanf03.c)