project(MyClion C)

set(CMAKE_C_STANDARD 99)
SET(CMAKE_BUILE_TYPE DEBUG)
SET(CMAKE_C_FLAGS_DEBUG "-g -Wall")

add_executable(pointer01 pointer01.c)
add_executable(pointer02 pointer02.c)
add_executable(pointer03 pointer03.c)
add_executable(pointer04 pointer04.c)
add_executable(pointer05 pointer05.c)
add_executable(pointer06 pointer06.c)



