project(MyClion C)

set(CMAKE_C_STANDARD 99)
SET(CMAKE_BUILE_TYPE DEBUG)
SET(CMAKE_C_FLAGS_DEBUG "-g -Wall")

add_executable(pointer01 pointer01.c)
add_executable(pointer02 pointer02.c)
add_executable(pointer03 pointer03.c)
add_executable(pointer04 pointer04.c)
add_executable(pointer05 pointer05.c)
add_executable(pointer06 pointer06.c)
add_executable(pointer07 pointer07.c)
add_executable(pointer08 pointer08.c)
add_executable(pointer09 pointer09.c)
add_executable(pointer10 pointer10.c)
add_executable(pointer11 pointer11.c)
add_executable(pointer12 pointer12.c)
add_executable(pointer13 pointer13.c)
add_executable(pointer14 pointer14.c)
add_executable(pointer15 pointer15.c)
add_executable(pointer16 pointer16.c)
