project(MyClion C)

set(CMAKE_C_STANDARD 99)
SET(CMAKE_BUILE_TYPE DEBUG)
SET(CMAKE_C_FLAGS_DEBUG "-g -Wall")


add_executable(str01 str01.c)
add_executable(str02 str02.c)
add_executable(str03 str03.c)
add_executable(str04 str04.c)
add_executable(str05 str05.c)
add_executable(str06 str06.c)
add_executable(str07 str07.c)
add_executable(str08 str08.c)
add_executable(str09 str09.c)
add_executable(str10 str10.c)



